Fix overflow error for comments #149

--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -363,8 +363,8 @@ p {
   @include flexbox();
   flex-flow: column;
   -webkit-flex-flow: column;
-  justify-content: center;
-  -webkit-justify-content: center;
+  // justify-content: center;
+  // -webkit-justify-content: center;
   height: calc(100% - 60px);
 }
 
@@ -425,6 +425,8 @@ p {
 
 .comment {
   font-size: $comment-font-size;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .comment-container {
@@ -432,7 +434,7 @@ p {
   min-height: 100%;
   display: inline-block;
   // float: right;
-  width: calc(100% - 60px);
+  width: calc(100% - 84px);
   padding-right: 20px;
   min-height: 117px;
   position: relative;
